Finally fixed padding and scrollbar issues on landing page

--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -23,6 +23,8 @@ body, html {
 }
 
 .container-fluid {
+    padding-right: 0;
+    padding-left: 0;
     height: 100%;
     width: 100%;
 }
@@ -114,7 +116,8 @@ body, html {
     background-size: cover;
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 #overlay {
